--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <title>Spring framework Guru</title>
@@ -12,10 +12,10 @@
         <th>Title</th>
         <th>Publisher</th>
     </tr>
-    <tr>
-        <td>123</td>
-        <td>Spring In Action</td>
-        <td>Wrax</td>
+    <tr th:each="book : ${books}">
+        <td th:text="${book.id}">123</td>
+        <td th:text="${book.title}">Spring In Action</td>
+        <td th:text="${book.publisher.name}">Wrax</td>
     </tr>
 </table>
 </body>
